// Copyright 2021 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package events;

// SessionSlice is a slice of submitted chunks
message SessionSlice {
    // Namespace is a session namespace
    string Namespace = 1;
    // SessionID is a session ID associated with this chunk
    string SessionID = 2;
    // Chunks is a list of submitted session chunks
    repeated SessionChunk Chunks = 3;
    // Version specifies session slice version
    int64 Version = 4;
}

// SessionChunk is a chunk to be posted in the context of the session
message SessionChunk {
    // Time is the occurence of this event
    int64 Time = 2;
    // Data is captured data, contains event fields in case of event, session data
    // otherwise
    bytes Data = 3;
    // EventType is event type
    string EventType = 4;
    // EventIndex is the event global index
    int64 EventIndex = 5;
    // Index is the autoincremented chunk index
    int64 ChunkIndex = 6;
    // Offset is an offset from the previous chunk in bytes
    int64 Offset = 7;
    // Delay is a delay from the previous event in milliseconds
    int64 Delay = 8;
}
